# zk-stark-mixer

./: README.md
mixer-contract/: .binpath  Cargo.toml
mixer-contract/io/: Cargo.toml
mixer-contract/io/src/: lib.rs
mixer-contract/src/: lib.rs  lib1.rs
mixer-frontend/: .eslintrc  package-lock.json  package.json  vite.config.ts
mixer-frontend/src/: App.tsx  EntryPage.tsx  EntryPage1.tsx  Login.tsx  MainPage.tsx  SignUp.tsx  TablePage.tsx  TablePageWithKey.tsx  TableTransactions.tsx  UserButton.tsx  UserPage.tsx  UserPage1.tsx  consts.ts  global.d.ts  main.tsx  useBalance.tsx  useMixingAmount.tsx  useTransactions.tsx  аллала
mixer-frontend/src-tauri/: Cargo.toml  tauri.conf.json
mixer-frontend/src-tauri/src/: main.rs  main1.rs
mixer-frontend/src-tauri/src/crypto/: mod.rs
mixer-frontend/src-tauri/src/crypto/account_handling/: mod.rs  utils.rs
mixer-frontend/src-tauri/src/crypto/mixing_handling/: methods.rs  mod.rs  utils.rs
mixer-frontend/src-tauri/src/garbage/: account_decoding.rs
mixer-frontend/src/components/: Login.tsx  SignUp.tsx
mixer-frontend/src/components/entry/: MainPage.tsx  TablePage.tsx  TableTransactions.tsx  UserButton.tsx
mixer-frontend/src/context/: index.tsx
mixer-frontend/src/hooks/: useBalance.tsx  useMixingAmount.tsx  useTransactions.tsx
mixer-frontend/src/utils/: IndexedDB.tsx  PasswordVerification.tsx
ready-executables/mixer-contract/: mixer_contract.meta.txt  mixer_contract.opt.wasm
risc0-prover/host/: Cargo.toml
risc0-prover/host/src/: main.rs
risc0-prover/methods/guest/: Cargo.toml
risc0-prover/methods/guest/src/: main.rs
risc0-prover/shared/src/: lib.rs
