[package]
name = "mixer-frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sodiumoxide = { version = "0.2", default-features = false }
sodiumoxide = { path = "/home/coolman/libs/sodiumoxide"}
scrypt = "0.6"
base64 = "0.13"

gclient = {path="/home/coolman/gear/gclient"}
hex-literal = "0.4.1"
hex = "0.4.1"
parity-scale-codec = "3.6.12"
schnorrkel = "0.9.1"

lazy_static = "1.4"

keyring = "2.3.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
