[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
rs_merkle = "1.4.2"
rand = "0.8.5"
hex = "0.4"
postcard = { version = "1.0.0", features = ["alloc"] }

shared = {path = "../shared"}